# AvrEmulator

./: .gitignore  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  coverage.yml  docker_build.yml  main.yml  rust.yml  test.yml
src/: avr_emulator.rs  clock.rs  instruction.rs  instruction_executor.rs  interrupt_handler.rs  main.rs  memory.rs  program_counter.rs  register.rs  registers.rs  timer.rs
src/avr_emulator/: instruction.rs  instruction_executor.rs  interrupt_handler.rs  memory.rs  timer.rs
src/avr_emulator/instruction/: adc.rs  add.rs  andi.rs  brbc.rs  brbs.rs  breq.rs  brge.rs  brlt.rs  brne.rs  bset.rs  cp.rs  cpc.rs  cpi.rs  eor.rs  (+30 more)
src/instruction/: adc.rs  add.rs  andi.rs  brbs.rs  breq.rs  brge.rs  brlt.rs  brne.rs  bset.rs  cp.rs  cpc.rs  cpi.rs  eor.rs  i_in.rs  i_std_y.rs  ld_z.rs  ldd_y.rs  ldi.rs  mov.rs  movw.rs  nop.rs  out.rs  pop.rs  push.rs  rcall.rs  ret.rs  reti.rs  rjmp.rs  sbc.rs  sbci.rs  sbiw.rs  sbr.rs  st_z.rs  subi.rs
tests/: avr.cmake  integration_test.rs
tests/allocation_on_heap/: CMakeLists.txt  main.c  test_allocation_on_heap.py
tests/if_statements/: CMakeLists.txt  main.c  test_if_statements.py
tests/local_variables/: CMakeLists.txt  main.c  test_local_variables.py
tests/nop_in_while/: CMakeLists.txt  main.c  test_nop_in_while.py
tests/recursive_function/: CMakeLists.txt  main.c  test_recursive_function.py
tests/timer_interrupt/: CMakeLists.txt  main.c  test_timer_interrupt.py
tests/timer_register_check/: CMakeLists.txt  main.c  test_timer_register_check.py
